--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sast-pubilc",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://1.15.154.17:8080",
+  "proxy": "http://10.160.152.103:7008",
   "dependencies": {
     "@douyinfe/semi-ui": "^2.0.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -11,7 +11,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
